[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://addons/local_agents/editor/ConfigurationPanel.gd" id="1_3l8fy"]
[ext_resource type="PackedScene" path="res://addons/local_agents/configuration/ui/ModelConfig.tscn" id="2_r61v8"]
[ext_resource type="PackedScene" path="res://addons/local_agents/configuration/ui/InferenceConfig.tscn" id="3_vp4tv"]

[node name="ConfigurationPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3l8fy")

[node name="ConfigTabs" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Model" type="MarginContainer" parent="ConfigTabs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ModelConfig" parent="ConfigTabs/Model" instance=ExtResource("2_r61v8")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inference" type="MarginContainer" parent="ConfigTabs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="InferenceConfig" parent="ConfigTabs/Inference" instance=ExtResource("3_vp4tv")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
